--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "test": "istanbul test mocha -- --reporter list test/*.js"
   },
   "dependencies": {
-    "bs58": "^2.0.1",
+    "coin-address-codec": "sublimator/coin-address-codec",
     "create-hash": "^1.1.0"
   }
 }
